Got linking Games in new List working properly, showing basic table of Top 100 List
