# server/src/list/dto/create-list.dto.ts
@@ -1,13 +1,25 @@
-import { Game } from '@src/entities';
+import { ApiProperty } from '@nestjs/swagger';
+import { GameId } from '@src/entities';
 import { Type } from 'class-transformer';
-import { IsArray, IsNotEmpty, IsOptional } from 'class-validator';
+import {
+  IsArray,
+  IsNotEmpty,
+  IsOptional,
+  ValidateNested,
+} from 'class-validator';
 
 export class CreateListDto {
   @IsNotEmpty()
   name: string = '';
 
+  @ApiProperty({
+    description: 'Ids of games to link for inclusion in the list',
+    type: () => GameId,
+    isArray: true,
+  })
   @IsOptional()
+  @ValidateNested({ each: true })
   @IsArray()
-  @Type(() => Game)
-  games: Partial<Game>[] = [];
+  @Type(() => GameId)
+  games: GameId[] = [];
 }
