# server/src/list/list.module.ts
@@ -1,11 +1,12 @@
 import { Logger, Module } from '@nestjs/common';
 import { TypeOrmModule } from '@nestjs/typeorm';
-import { allListEntities } from '../entities';
+import { GamesModule } from '@src/games/games.module';
+import { allListEntities, Game } from '../entities';
 import { ListController } from './list.controller';
 import { ListService } from './list.service';
 
 @Module({
-  imports: [TypeOrmModule.forFeature(allListEntities)],
+  imports: [GamesModule, TypeOrmModule.forFeature([...allListEntities, Game])],
   controllers: [ListController],
   providers: [ListService, Logger],
 })
